--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -1,35 +1,78 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css">
+        <script src="automech.js"></script>
+        <script src="waveform.js"></script>
+        <script src="menus.js"></script>
         <title>AutoMech v0</title>
-
-        <style>
-            h1 {
-                font-size: 400%;
-                color: rgb(255, 80, 71);
-                text-align: center;
-                padding-right: 20px;
-
-            }
-
-            h4 {
-                font-size: 200%;
-                color: black;
-            }
-
-            .title_text {
-                display: flex;
-                flex-direction: row;
-                align-items: baseline;
-                justify-content: center;
-            }
-        </style>
     </head>
 
     <body>
-        <div class="title_text">
-            <h1> A U T O M E C H </h1>
-            <h4> v0 </h4>
-        <div>
-    </body>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="automechlogo.png">      
+            </div>
+        </nav>
+        
+        <div class="left__box">
+            <br>
+            <br>
+            <br>
+            <center><h2>MEASUREMENTS</h2> </center>
+            <div class="left__container">
+                <h3>RUNTIME (seconds): </h3>
+                <p id="runtime"></p>
+                <br>
+                <h3>ENGINE SPEED (rpm): </h3>
+                <p id="rpm"></p>
+                <br>
+                <h3>TOTAL MISFIRES: </h3>
+                <p id="totmisfires"></p>
+                <br>
+                <h3>CYL-1:</h4>
+                <p id="misfires1"></p>
+                <br>
+                <h3>CYL-2:</h4>
+                <p id="misfires2"></p>
+                <br>
+                <h3>CYL-3:</h4>
+                <p id="misfires3"></p>
+                <br>
+                <h3>CYL-4:</h4>
+                <p id="misfires4"></p>
+                <br>
+                <button onclick="runtimeUpdate(), rpmUpdate(), getMisfireTot(), getMisfire('misfires1', cyl1), getMisfire('misfires2', cyl2), getMisfire('misfires3', cyl3), getMisfire('misfires4', cyl4)">REFRESH (placeholder)</button>
+            </div>
+        </div>
+
+        <div class="right__box">
+            <div class="rightheaders">
+            <h2>ENGINE CONFIGURATION:</h2> 
+            <div class="engcfgform">
+                <form action="#">  
+                    <select name="engcfg" id="engcfg" onchange='this.form.submit()'>
+                        <option value="straight4">Straight 4</option>
+                        <option value="straight6">Straight 6</option>
+                    </select> 
+                </form>
+            </div>
+
+            <h2>FIRING ORDER:</h2>
+            <div class="orderform">
+                <form action="#">  
+                    <select name="firingorder" id="firingorder" onchange='this.form.submit()'>
+                        <option value="1-3-4-2">1-3-4-2</option>
+                        <option value="1-5-3-6-2-4">1-5-3-6-2-4</option>
+                    </select>
+                </form>
+            </div>
+
+            <div class="waveformcontainer">
+                <h1>WAVEFORM</h1>>
+
+            </div>
+
+        </div>
+    </div>    
 </html>
