px->%,rem,vw samt småändringar i html

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
         <script src="automech.js"></script>
         <script src="waveform.js"></script>
@@ -57,7 +58,7 @@
                     </select> 
                 </form>
             </div>
-
+            <br>
             <h2>FIRING ORDER:</h2>
             <div class="orderform">
                 <form action="#">  
