--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -1,26 +1,27 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles.css">
-        <script src="automech.js"></script>
-        <script src="waveform.js"></script>
-        <script src="menus.js"></script>
+        <link rel="stylesheet" href="{% static 'styles.css' %}">
+        <script src="{% static 'automech.js' %}"></script>
+        <script src="{% static 'waveform.js' %}"></script>
         <title>AutoMech v0</title>
     </head>
 
     <body>
         <nav class="navbar">
             <div class="logo">
-                <img src="automechlogo.png">      
+                <img src="{% static 'automechlogo.png' %}">
             </div>
         </nav>
-        
+
         <div class="left__box">
             <br>
             <br>
             <br>
-            <center><h2>MEASUREMENTS</h2> </center>
+            <center><h2>MEASUREMENTS</h2></center>
             <div class="left__container">
                 <h3>RUNTIME (seconds): </h3>
                 <p id="runtime">0</p>
@@ -50,19 +51,19 @@
 
         <div class="right__box">
             <div class="rightheaders">
-            <h2>ENGINE CONFIGURATION:</h2> 
+            <h2>ENGINE CONFIGURATION:</h2>
             <div class="engcfgform">
-                <form action="#">  
+                <form action="#">
                     <select name="engcfg" id="engcfg" onchange='this.form.submit()'>
                         <option value="straight4">Straight 4</option>
                         <option value="straight6">Straight 6</option>
-                    </select> 
+                    </select>
                 </form>
             </div>
             <br>
             <h2>FIRING ORDER:</h2>
             <div class="orderform">
-                <form action="#">  
+                <form action="#">
                     <select name="firingorder" id="firingorder" onchange='this.form.submit()'>
                         <option value="1-3-4-2">1-3-4-2</option>
                         <option value="1-5-3-6-2-4">1-5-3-6-2-4</option>
@@ -76,5 +77,5 @@
             </div>
 
         </div>
-    </div>    
+    </div>
 </html>
