--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -10,7 +10,7 @@
         <title>AutoMech v0</title>
     </head>
 
-    <body>
+    <body onload="init()">
         <nav class="navbar">
             <div class="logo">
                 <img src="{% static 'automechlogo.png' %}">
@@ -44,8 +44,8 @@
                 <h3>CYL-4:</h4>
                 <p id="misfires4">0</p>
                 <br>
-                <button id="start" onclick="disableStartBtn(), runtimeCount(), rpmUpdate(), getMisfireTot(), getMisfire('misfires1', cyl1), getMisfire('misfires2', cyl2), getMisfire('misfires3', cyl3), getMisfire('misfires4', cyl4)">START</button>
-                <button id="stop" onclick="stop()">STOP</button>
+                <button id="start" onclick="begin_diagnostics(), disableStartBtn(), runtimeCount(), rpmUpdate(), getMisfireTot(), getMisfire('misfires1', cyl1), getMisfire('misfires2', cyl2), getMisfire('misfires3', cyl3), getMisfire('misfires4', cyl4)">START</button>
+                <button id="stop" onclick="stop(), end_diagnostics()">STOP</button>
             </div>
         </div>
 
@@ -53,18 +53,18 @@
             <div class="rightheaders">
             <h2>ENGINE CONFIGURATION:</h2>
             <div class="engcfgform">
-                <form action="#">
-                    <select name="engcfg" id="engcfg" onchange='this.form.submit()'>
-                        <option value="straight4">Straight 4</option>
-                        <option value="straight6">Straight 6</option>
+                <form>
+                    <select name="engcfg" id="engcfg" onchange='updateEngineCfg(this.value)'>
+                        <option value=4>Straight 4</option>
+                        <option value=6>Straight 6</option>
                     </select>
                 </form>
             </div>
             <br>
             <h2>FIRING ORDER:</h2>
             <div class="orderform">
-                <form action="#">
-                    <select name="firingorder" id="firingorder" onchange='this.form.submit()'>
+                <form>
+                    <select name="firingorder" id="firingorder" onchange='updateFiringOrder(this.value)'>
                         <option value="1-3-4-2">1-3-4-2</option>
                         <option value="1-5-3-6-2-4">1-5-3-6-2-4</option>
                     </select>
