Frontend to backend communication now works and displays rpm

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -44,7 +44,7 @@
                 <h3>CYL-4:</h4>
                 <p id="misfires4">0</p>
                 <br>
-                <button id="start" onclick="begin_diagnostics(), disableStartBtn(), runtimeCount(), rpmUpdate(), getMisfireTot(), getMisfire('misfires1', cyl1), getMisfire('misfires2', cyl2), getMisfire('misfires3', cyl3), getMisfire('misfires4', cyl4)">START</button>
+                <button id="start" onclick="begin_diagnostics(), disableStartBtn(), runtimeCount(), rpmUpdate(750), getMisfireTot(), getMisfire('misfires1', cyl1), getMisfire('misfires2', cyl2), getMisfire('misfires3', cyl3), getMisfire('misfires4', cyl4)">START</button>
                 <button id="stop" onclick="stop(), end_diagnostics()">STOP</button>
             </div>
         </div>
