--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -11,71 +11,75 @@
     </head>
 
     <body onload="init()">
+
         <nav class="navbar">
             <div class="logo">
                 <img src="{% static 'automechlogo.png' %}">
             </div>
         </nav>
 
-        <div class="left__box">
-            <br>
-            <br>
-            <br>
-            <center><h2>MEASUREMENTS</h2></center>
-            <div class="left__container">
-                <h3>RUNTIME (seconds): </h3>
-                <p id="runtime">0</p>
-                <br>
-                <h3>ENGINE SPEED (rpm): </h3>
-                <p id="rpm">0</p>
-                <br>
-                <h3>TOTAL MISFIRES: </h3>
-                <p id="totmisfires">0</p>
-                <br>
-                <h3>CYL-1:</h4>
-                <p id="misfires1">0</p>
-                <br>
-                <h3>CYL-2:</h4>
-                <p id="misfires2">0</p>
-                <br>
-                <h3>CYL-3:</h4>
-                <p id="misfires3">0</p>
-                <br>
-                <h3>CYL-4:</h4>
-                <p id="misfires4">0</p>
-                <br>
-                <button id="start" onclick="begin_diagnostics(), disableStartBtn(), runtimeCount(), rpmUpdate(750), getMisfireTot(), getMisfire('misfires1', cyl1), getMisfire('misfires2', cyl2), getMisfire('misfires3', cyl3), getMisfire('misfires4', cyl4)">START</button>
-                <button id="stop" onclick="stop(), end_diagnostics()">STOP</button>
+        <div class="left-right-container">
+            <div class="left-box">
+                <div class="measurements-title">
+                    <h2>MEASUREMENTS</h2>
+                </div>
+                <div class="left-container">
+                    <h3>RUNTIME (seconds): </h3>
+                    <p id="runtime">0</p>
+
+                    <h3>ENGINE SPEED (rpm): </h3>
+                    <p id="rpm">0</p>
+
+                    <h3>TOTAL MISFIRES: </h3>
+                    <p id="totmisfires">0</p>
+
+                    <h3>CYL-1:</h4>
+                    <p id="misfires1">0</p>
+
+                    <h3>CYL-2:</h4>
+                    <p id="misfires2">0</p>
+
+                    <h3>CYL-3:</h4>
+                    <p id="misfires3">0</p>
+
+                    <h3>CYL-4:</h4>
+                    <p id="misfires4">0</p>
+
+                    <div class="start-stop-container">
+                        <button id="start" onclick="begin_diagnostics(), disableStartBtn(), runtimeCount(), rpmUpdate(750), getMisfireTot(), getMisfire('misfires1', cyl1), getMisfire('misfires2', cyl2), getMisfire('misfires3', cyl3), getMisfire('misfires4', cyl4)">START</button>
+                        <button id="stop" onclick="stop(), end_diagnostics()">STOP</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="right-box">
+
+                <div class="engine-parameters">
+                    <div class="engcfgform">
+                        <h2>ENGINE CONFIGURATION:</h2>
+                        <form>
+                            <select name="engcfg" id="engcfg" onchange='updateEngineCfg(this.value)'>
+                                <option value=4>Straight 4</option>
+                                <option value=6>Straight 6</option>
+                            </select>
+                        </form>
+                    </div>
+                    <div class="orderform">
+                        <h2>FIRING ORDER:</h2>
+                        <form>
+                            <select name="firingorder" id="firingorder" onchange='updateFiringOrder(this.value)'>
+                                <option value="1-3-4-2">1-3-4-2</option>
+                                <option value="1-5-3-6-2-4">1-5-3-6-2-4</option>
+                            </select>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="waveformcontainer">
+                    <canvas id="glCanvas"></canvas>
+                    <script src="waveform.js"></script>
+                </div>
             </div>
         </div>
-
-        <div class="right__box">
-            <div class="rightheaders">
-            <h2>ENGINE CONFIGURATION:</h2>
-            <div class="engcfgform">
-                <form>
-                    <select name="engcfg" id="engcfg" onchange='updateEngineCfg(this.value)'>
-                        <option value=4>Straight 4</option>
-                        <option value=6>Straight 6</option>
-                    </select>
-                </form>
-            </div>
-            <br>
-            <h2>FIRING ORDER:</h2>
-            <div class="orderform">
-                <form>
-                    <select name="firingorder" id="firingorder" onchange='updateFiringOrder(this.value)'>
-                        <option value="1-3-4-2">1-3-4-2</option>
-                        <option value="1-5-3-6-2-4">1-5-3-6-2-4</option>
-                    </select>
-                </form>
-            </div>
-
-            <div class="waveformcontainer">
-                <h1>WAVEFORM</h1>>
-
-            </div>
-
-        </div>
-    </div>
+    </body>
 </html>
