--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+{% csrf_token %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -16,8 +16,14 @@
             <div class="logo">
                 <img src="{% static 'automechlogo.png' %}">
             </div>
-        </nav>
+            <div class="version">
+                <p>v0.1</p>
+            </div>
+            <div class="prefBtn-container">
+                <button id="prefBtn" class="prefBtnStyle" onclick="darkMode()">Toggle Dark Mode</button>
 
+            </div>
+        </nav>
         <div class="left-right-container">
             <div class="left-box">
                 <div class="measurements-title">
@@ -46,14 +52,13 @@
                     <p id="misfires4">0</p>
 
                     <div class="start-stop-container">
-                        <button id="start" onclick="begin_diagnostics(), disableStartBtn(), runtimeCount(), rpmUpdate(750), getMisfireTot(), getMisfire('misfires1', cyl1), getMisfire('misfires2', cyl2), getMisfire('misfires3', cyl3), getMisfire('misfires4', cyl4)">START</button>
-                        <button id="stop" onclick="stop(), end_diagnostics()">STOP</button>
+                        <button id="startStopBtn" onclick="toggleBtn()">START</button>
                     </div>
                 </div>
             </div>
 
             <div class="right-box">
-
+                
                 <div class="engine-parameters">
                     <div class="engcfgform">
                         <h2>ENGINE CONFIGURATION:</h2>
@@ -77,7 +82,7 @@
 
                 <div class="waveformcontainer">
                     <canvas id="glCanvas"></canvas>
-                    <script src="waveform.js"></script>
+                    
                 </div>
             </div>
         </div>
