added input device

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -77,6 +77,12 @@
                             </select>
                         </form>
                     </div>
+					<div class="InputDevice">
+                        <h2>Input device:</h2>
+                        <form>
+                            <input id="inputdevice"></input>
+                        </form>
+                    </div>
                 </div>
 
                 <div class="waveformcontainer">
