added input device selector

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -77,10 +77,12 @@
                             </select>
                         </form>
                     </div>
-					<div class="InputDevice">
+					<div class="inputform">
                         <h2>Input device:</h2>
                         <form>
-                            <input id="inputdevice"></input>
+							<select name="inputdevice" id="inputdevice" onchange='updateInputDevice(this.value)'>
+
+                            </select>
                         </form>
                     </div>
                 </div>
