fixed h4 mistype to h3

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -8,7 +8,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <script src="{% static 'automech.js' %}"></script>
     <title>AutoMech v0</title>
@@ -43,21 +44,21 @@
                 <h3>TOTAL MISFIRES: </h3>
                 <p id="totmisfires">0</p>
 
-                <h3>CYL-1:</h4>
-                    <p id="misfires1">0</p>
+                <h3>CYL-1:</h3>
+                <p id="misfires1">0</p>
 
-                    <h3>CYL-2:</h4>
-                        <p id="misfires2">0</p>
+                <h3>CYL-2:</h3>
+                <p id="misfires2">0</p>
 
-                        <h3>CYL-3:</h4>
-                            <p id="misfires3">0</p>
+                <h3>CYL-3:</h3>
+                <p id="misfires3">0</p>
 
-                            <h3>CYL-4:</h4>
-                                <p id="misfires4">0</p>
+                <h3>CYL-4:</h3>
+                <p id="misfires4">0</p>
 
-                                <div class="start-stop-container">
-                                    <button id="startStopBtn" onclick="toggleBtn()">START</button>
-                                </div>
+                <div class="start-stop-container">
+                    <button id="startStopBtn" onclick="toggleBtn()">START</button>
+                </div>
             </div>
         </div>
 
