slight visual updates

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -85,7 +85,7 @@
                     </form>
                 </div>
                 <div class="inputform">
-                    <h2>Input device:</h2>
+                    <h2>INPUT DEVICE:</h2>
                     <form>
                         <select name="inputdevice" id="inputdevice" onchange='updateInputDevice(this.value)'>
 
