major code cleanup

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -12,6 +12,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <script src="{% static 'js/automech.js' %}"></script>
+    <script src="{% static 'js/requests.js' %}"></script>
     <script src="{% static 'js/waveform.js' %}"></script>
     <title>AutoMech v0</title>
 </head>
