--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -15,15 +15,6 @@
     <script src="{% static 'js/automech.js' %}"></script>
     <script src="{% static 'js/requests.js' %}"></script>
     <script src="{% static 'js/waveform.js' %}"></script>
-    <style>
-        .resizable {
-            width: 60vw;
-        }
-
-        .left-container.resizable {
-            width: 30vw;
-        }
-    </style>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script>
@@ -31,11 +22,108 @@
             $(".resizable").resizable();
         });
     </script>
+    <style>
+        body {
+            background-image: url("{% static 'Background.png' %}");
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+    </style>
     <title>AutoMech v0</title>
+    <style>
+        .custom-select-container {
+            display: flex;
+            width: 100%;
+        }
+
+        .resizable {
+            width: 60vw;
+        }
+
+        .left-container.resizable {
+            width: 30vw;
+        }
+
+        /*the container must be positioned relative:*/
+        .custom-select-own {
+            position: relative;
+            font-family: Arial;
+            z-index: 100;
+            width: 33.3333333333333333333333333333333333333333333%;
+        }
+
+        .custom-select-own select,
+        .custom-select-own select option {
+            z-index: 100;
+            width: 100%;
+            text-align: center;
+            font-size: 1vw;
+            height: 2.5vw;
+        }
+
+        .select-selected {
+            background-color: DodgerBlue;
+            z-index: 100;
+        }
+
+        /*style the arrow inside the select element:*/
+        .select-selected:after {
+            position: absolute;
+            content: "";
+            top: 14px;
+            right: 10px;
+            width: 0;
+            height: 0;
+            border: 6px solid transparent;
+            border-color: #fff transparent transparent transparent;
+            z-index: 100;
+        }
+
+        /*point the arrow upwards when the select box is open (active):*/
+        .select-selected.select-arrow-active:after {
+            border-color: transparent transparent #fff transparent;
+            top: 7px;
+            z-index: 100;
+        }
+
+        /*style the items (options), including the selected item:*/
+        .select-items div,
+        .select-selected {
+            color: #ffffff;
+            padding: 8px 16px;
+            border: 1px solid transparent;
+            border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+            cursor: pointer;
+            user-select: none;
+            z-index: 100;
+        }
+
+        /*style items (options):*/
+        .select-items {
+            position: absolute;
+            background-color: DodgerBlue;
+            top: 100%;
+            left: 0;
+            right: 0;
+            z-index: 200;
+        }
+
+        /*hide the items when the select box is closed:*/
+        .select-hide {
+            display: none;
+        }
+
+        .select-items div:hover,
+        .same-as-selected {
+            background-color: rgba(0, 0, 0, 0.1);
+            z-index: 100;
+        }
+    </style>
 </head>
 
 <body onload="init(), initializeGraph()">
-    
+
     <nav class="navbar">
         <div class="logo">
             <img src="{% static 'automechlogo.png' %}">
@@ -48,41 +136,29 @@
 
         </div>
     </nav>
-    <div class="engine-parameters">
-        <ul>
-            <li>
-                <div class="engcfgform">
-                    <h2>ENGINE CONFIGURATION:</h2>
-                    <form>
-                        <select name="engcfg" id="engcfg" onchange='updateEngineCfg(this.value)'>
-                            <option value=4>Straight 4</option>
-                            <option value=6>Straight 6</option>
-                        </select>
-                    </form>
-                </div>
-            </li>
-            <li>
-                <div class="orderform">
-                    <h2>FIRING ORDER:</h2>
-                    <form>
-                        <select name="firingorder" id="firingorder" onchange='updateFiringOrder(this.value)'>
-                            <option value="1-3-4-2">1-3-4-2</option>
-                            <option value="1-5-3-6-2-4">1-5-3-6-2-4</option>
-                        </select>
-                    </form>
-                </div>
-            </li>
-            <li>
-                <div class="inputform">
-                    <h2>INPUT DEVICE:</h2>
-                    <form>
-                        <select name="inputdevice" id="inputdevice" onchange='updateInputDevice(this.value)'>
+    <div class="custom-select-container">
 
-                        </select>
-                    </form>
-                </div>
-            </li>
-        </ul>
+        <div class="custom-select-own">
+            <select name="engcfg" id="engcfg" onchange='updateEngineCfg(this.value)'>
+                <option value=0>ENGINE CONFIGURATION:</option>
+                <option value=4>Straight 4</option>
+                <option value=6>Straight 6</option>
+            </select>
+        </div>
+        <div class="custom-select-own">
+            <select name="firingorder" id="firingorder" onchange='updateFiringOrder(this.value)'>
+                <option value=0>FIRING ORDER:</option>
+                <option value="1-3-4-2">1-3-4-2</option>
+                <option value="1-5-3-6-2-4">1-5-3-6-2-4</option>
+            </select>
+        </div>
+        <div class="custom-select-own">
+            <select name="inputdevice" id="inputdevice" onchange='updateInputDevice(this.value)'>
+                <option value=0>INPUT DEVICE:</option>
+
+            </select>
+        </div>
+
     </div>
     <div class="left-right-container">
         <div class="left-box">
