--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -11,7 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles-min-786.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles-min-971.css' %}">
     <script src="{% static 'js/automech.js' %}"></script>
     <script src="{% static 'js/requests.js' %}"></script>
     <script src="{% static 'js/waveform.js' %}"></script>
@@ -29,14 +31,6 @@
             background-attachment: fixed;
             background-size: cover;
         }
-    </style>
-    <title>AutoMech v0</title>
-    <style>
-        .custom-select-container {
-            display: flex;
-            width: 100%;
-        }
-
         .resizable {
             width: 60vw;
         }
@@ -44,82 +38,8 @@
         .left-container.resizable {
             width: 30vw;
         }
-
-        /*the container must be positioned relative:*/
-        .custom-select-own {
-            position: relative;
-            font-family: Arial;
-            z-index: 100;
-            width: 33.3333333333333333333333333333333333333333333%;
-        }
-
-        .custom-select-own select,
-        .custom-select-own select option {
-            z-index: 100;
-            width: 100%;
-            text-align: center;
-            font-size: 1vw;
-            height: 2.5vw;
-        }
-
-        .select-selected {
-            background-color: DodgerBlue;
-            z-index: 100;
-        }
-
-        /*style the arrow inside the select element:*/
-        .select-selected:after {
-            position: absolute;
-            content: "";
-            top: 14px;
-            right: 10px;
-            width: 0;
-            height: 0;
-            border: 6px solid transparent;
-            border-color: #fff transparent transparent transparent;
-            z-index: 100;
-        }
-
-        /*point the arrow upwards when the select box is open (active):*/
-        .select-selected.select-arrow-active:after {
-            border-color: transparent transparent #fff transparent;
-            top: 7px;
-            z-index: 100;
-        }
-
-        /*style the items (options), including the selected item:*/
-        .select-items div,
-        .select-selected {
-            color: #ffffff;
-            padding: 8px 16px;
-            border: 1px solid transparent;
-            border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-            cursor: pointer;
-            user-select: none;
-            z-index: 100;
-        }
-
-        /*style items (options):*/
-        .select-items {
-            position: absolute;
-            background-color: DodgerBlue;
-            top: 100%;
-            left: 0;
-            right: 0;
-            z-index: 200;
-        }
-
-        /*hide the items when the select box is closed:*/
-        .select-hide {
-            display: none;
-        }
-
-        .select-items div:hover,
-        .same-as-selected {
-            background-color: rgba(0, 0, 0, 0.1);
-            z-index: 100;
-        }
     </style>
+    <title>AutoMech v0</title>
 </head>
 
 <body onload="init(), initializeGraph()">
