added support for choosing fs and chunk size

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -55,6 +55,23 @@
             <button id="prefBtn" class="prefBtnStyle" onclick="darkMode()">Toggle Dark Mode</button>
 
         </div>
+        <div class="menu">
+            <div class="menu-item" id="menu-items">
+                <text style="color:rgb(199, 198, 198);">Sampling rate:</text>
+                <select name="samplingRate" id="samplingRate" onchange='updateSamplingRate(this.value)'>
+                    <option selected="selected" value=44100>44100 Hz (default)</option>
+                    <option value=48000>48000 Hz</option>
+                </select>
+                <text style="color:rgb(199, 198, 198);">Chunk size:</text>
+                <select name="chunkSize" id="chunkSize" onchange='updateChunkSize(this.value)'>
+                    <b>Chunk size</b>
+                    <option value=2048>2048 samples</option>
+                    <option selected="selected" value=4096>4096 samples (default)</option>
+                    <option value=8192>8192 samples</option>
+                </select>
+            </div>
+            <button class="menu-button-style" onclick="menuButton()">Settings</button>
+        </div>
     </nav>
     <div class="custom-select-container">
 
