slight visual updates to top menu

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -70,7 +70,7 @@
                     <option value=8192>8192 samples</option>
                 </select>
             </div>
-            <button class="menu-button-style" onclick="menuButton()">Settings</button>
+            <button class="menu-button-style" id="menu-button" onclick="menuButton()">Settings</button>
         </div>
     </nav>
     <div class="custom-select-container">
