--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{% static 'css/styles-min-971.css' %}">
     <script src="{% static 'js/automech.js' %}"></script>
     <script src="{% static 'js/requests.js' %}"></script>
-    <script src="{% static 'js/waveform.js' %}"></script>
+    <script src="{% static 'js/graph/graph.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script>
@@ -42,7 +42,9 @@
     <title>AutoMech v0</title>
 </head>
 
-<body onload="init(), initializeGraph()">
+<body onload="init()">
+
+    <canvas id="graph-canvas" width="1920" height="1080"></canvas>
 
     <nav class="navbar">
         <div class="logo">
@@ -132,7 +134,9 @@
 
         <div class="right-box">
             <div class="waveformcontainer resizable">
-                <canvas id="glCanvas" width="1080" height="420"></canvas>
+                <div class="graph" id="graph-audio-1" style="height: 300px;"></div>
+                <div class="graph" id="graph-audio-2" style="height: 300px;"></div>
+                <div class="graph" id="graph-rpm" style="width: 100%; height: 300px;"></div>
             </div>
         </div>
     </div>
