created an independent js file (graph_toolkit.js) to make graph.js more readable

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'css/styles-min-971.css' %}">
     <script src="{% static 'js/automech.js' %}"></script>
     <script src="{% static 'js/requests.js' %}"></script>
+    <script src="{% static 'js/graph/graph_toolkit.js' %}"></script>
     <script src="{% static 'js/graph/graph.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
