--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% csrf_token %}
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
@@ -44,7 +43,8 @@
 </head>
 
 <body onload="init()">
-
+    {% csrf_token %}
+    
     <canvas id="graph-canvas" width="1920" height="1080"></canvas>
 
     <nav class="navbar">
@@ -75,14 +75,14 @@
     <div class="custom-select-container">
 
         <div class="custom-select-own">
-            <select name="engcfg" id="engcfg" onchange='updateEngineCfg(this.value)'>
+            <select name="engcfg" id="engcfg" onchange='updateEngineCfg(this.value); validateEngineConfiguration(this.value); validateStartButton()'>
                 <option value=0>ENGINE CONFIGURATION:</option>
                 <option value=4>Straight 4</option>
                 <option value=6>Straight 6</option>
             </select>
         </div>
         <div class="custom-select-own">
-            <select name="firingorder" id="firingorder" onchange='updateFiringOrder(this.value)'>
+            <select name="firingorder" id="firingorder" onchange='updateFiringOrder(this.value); validateFiringOrder(this.value); validateStartButton()'>
                 <option value=0>FIRING ORDER:</option>
                 <option value="1-3-4-2">1-3-4-2</option>
                 <option value="1-5-3-6-2-4">1-5-3-6-2-4</option>
@@ -91,10 +91,8 @@
         <div class="custom-select-own">
             <select name="inputdevice" id="inputdevice" onchange='updateInputDevice(this.value)'>
                 <option value=0>INPUT DEVICE:</option>
-
             </select>
         </div>
-
     </div>
     <div class="left-right-container">
         <div class="left-box">
@@ -124,7 +122,7 @@
                 <p id="misfires4">0</p>
 
                 <div class="start-stop-container">
-                    <button id="startStopBtn" onclick="toggleBtn()">START</button>
+                    <button id="startStopBtn" title="Select engine configuration and firing order to begin diagnostics." onclick="toggleBtn()" disabled>START</button>
                 </div>
             </div>
         </div>
