--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -44,7 +44,7 @@
 
 <body onload="init()">
     {% csrf_token %}
-    
+
     <canvas id="graph-canvas" width="1920" height="1080"></canvas>
 
     <nav class="navbar">
@@ -123,6 +123,10 @@
 
                 <div class="start-stop-container">
                     <button id="startStopBtn" title="Select engine configuration and firing order to begin diagnostics." onclick="toggleBtn()" disabled>START</button>
+                    <div class="connection-area">
+                        <img id="connection-icon" src="{% static 'disconnected.png' %}" width="20" height="15">
+                        <small id="connection-status">Not connected</small>
+                    </div>
                 </div>
             </div>
         </div>
