--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -54,6 +54,7 @@
                     <option value=8192>8192 samples</option>
                 </select>
                 <button class="menu-item" id="prefBtn" onclick="darkMode()">Toggle Light/Dark Mode</button>
+                <button class="menu-item" onclick='refreshInputDevices()'>Refresh Input Devices</button>
             </div>
             <button class="menu-button-style" id="menu-button" onclick="menuButton()">Settings</button>
         </div>
