Replaced background image with linear gradients

--- a/Frontend/AutoMech.html
+++ b/Frontend/AutoMech.html
@@ -19,10 +19,7 @@
     <script src="{% static 'js/graph/graph.js' %}"></script>
     <style>
         body {
-            background-image: url("{% static 'background-light.png' %}");
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
+            background: linear-gradient(0deg, rgba(119,119,119,1) 0%, rgba(163,163,163,1) 14%, rgba(255,255,255,1) 48%);
         }
     </style>
     <title>AutoMech v1.0</title>
